Fix overflow on small window sizes

--- a/src/app/components/rule-patterns/rule-patterns.component.css
+++ b/src/app/components/rule-patterns/rule-patterns.component.css
@@ -6,20 +6,15 @@
     width: 100%;
 }
 
-.collapsible-header .btn {
-    height: 100%;
+.btn-close {
     float: right;
-    margin-right: -15px;
-    padding-right:0;
-    padding-left: 15px;
-    width: auto;
 }
 
 .limited-length {
-    width: 50em;
-    height: 2em;
-    display: inline-block;
     white-space: nowrap;
+    display:inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
+    max-width: calc(100% - 100px);
+    line-height: 1em;
 }
